concord_examples/tests/ui/auth_endpoint_recursive.stderr
error: credential `session` cannot acquire via endpoint `LoginForSession` because the endpoint uses that credential
  --> tests/ui/auth_endpoint_recursive.rs:10:14
   |
10 |         POST LoginForSession
   |              ^^^^^^^^^^^^^^^
